--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~12.1.1",
     "@capacitor/android": "3.2.0",
     "@capacitor/app": "1.0.2",
+    "@capacitor/camera": "^1.0.4",
     "@capacitor/core": "3.2.0",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "firebase": "^8.9.1",
     "rxjs": "~6.6.0",
